--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1 class="main-h1 d-inline w-100">Jakość jest najważniejsza!</h1>
         </header>
 
-        <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-5" id="aboutUs">
+        <section class="page-section row p-0 m-0 justify-content-center mt-5 mb-0" id="aboutUs">
             <div class="col-12 col-md-10">
                 <div class="text-center">
                     <div class="text-center text-md-right mt-4 justify-content-center row p-0 m-0">
@@ -66,13 +66,13 @@
             </div>
         </section>
 
-        <section class="page-section row p-0 m-0 justify-content-center mt-5 profilDiv">
+        <section class="page-section row p-0 m-0 justify-content-center profilDiv">
             <div class="row p-0 m-0 w-100">
-                <div class="col-6 aboutUsImg1"></div>
-                <div class="col-6 row p-0 m-0 justify-content-center align-items-center flex-column">
+                <div class="col-md-6 col-12 aboutUsImg1"></div>
+                <div class="col-md-6 col-12  row p-0 m-0 justify-content-center align-items-center flex-column">
                     <div class="row p-0 m-0 justify-content-center">
-                        <div class="headerColor col-7"><div class="aboutUsH1 mb-4">CO NAS WYRÓŻNIA?</div></div>
-                        <div class="col-7">
+                        <div class="headerColor col-md-7 col-12"><div class="aboutUsH1 mb-4">CO NAS WYRÓŻNIA?</div></div>
+                        <div class="col-md-7 col-12">
                             <div class="wyrItem">
                                 <b>WYKWALIFIKOWANA</b> KADRA
                                 Z MIĘDZYNARODOWYM
@@ -92,20 +92,44 @@
                     </div>
 
                 </div>
-                <div class="col-6 row p-0 m-0 justify-content-center align-items-center flex-column" id="offert">
-                    <div class="col-7">
-                        <div class="aboutUsH1 headerColor">PROFIL DZIAŁALNOŚCI</div>
-                        <div class="aboutUsH2">Najwyższej jakości</div>
-                        <ul class="profilUl text-md-left text-center p-0">
-                            <li>Prace wykończeniowe</li>
-                            <li>Instalacje elektryczne</li>
-                            <li>Instalacje hydrauliczne</li>
-                            <li>Instalacje teletechniczne</li>
-                            <li>Termoizolacja budynków</li>
-                        </ul>
+                <div class="col-12 row p-0 m-0 flex-md-row-reverse ">
+                    <div class="col-md-6 col-12 aboutUsImg2"></div>
+                    <div class="col-md-6 col-12 row p-0 m-0 justify-content-center align-items-center flex-column" id="offert">
+                        <div class="col-md-7 col-12">
+                            <div class="aboutUsH1 headerColor">PROFIL DZIAŁALNOŚCI</div>
+                            <div class="aboutUsH2">Najwyższej jakości</div>
+                            <ul class="profilUl text-left p-0 pl-md-0 pl-4">
+                                <li>Prace wykończeniowe</li>
+                                <li>Instalacje elektryczne</li>
+                                <li>Instalacje hydrauliczne</li>
+                                <li>Instalacje teletechniczne</li>
+                                <li>Termoizolacja budynków</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
+        <section class="page-section row m-0 justify-content-center mt-5 mb-5 valDIv">
+            <div class="col-12 col-md-10">
+                <div class="text-center">
+                    <div class="text-center text-md-right justify-content-center row p-0 m-0">
+                        <div class="display-4 abUsHeader headerColor">Uzyskaj wycenę</div>
                     </div>
                 </div>
-                <div class="col-6 aboutUsImg2"></div>
+                <div class="text-center whoWeAre mb-5 mt-2 headerColor">Gwarajcia uczciwych cen</div>
+                <div class="row p-0 m-0 justify-content-center">
+                    <div class="text-center whoWeAreText headerColor">
+                        BuildPrem to Firma budowlana i wykończeniowa,
+                        gdzie znajdziesz pełną obsługę oraz nasze poświęcenie w budowaniu i ulepszaniu budynków mieszkaniowych i
+                        komercyjnych zgodnie z potrzebami i pragnieniami klientów. Budowany od 2000 roku nasz zespół profesjonalistów z
+                        siedzibą w miejscowości Warszawa jest gotowy, aby zmodernizować Twoją przestrzeń dokładnie według
+                        Twoich wymagań. Wystarczy do nas zadzwonić lub napisać, a my skontaktujemy się z Tobą i podamy wycenę.
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -114,13 +138,13 @@
                     <div class="contactDiv bg-dark p-md-5 p-3 m-0">
                         <div class="row p-0 m-0 flex-md-row flex-column">
                             <div class="conPart text-left">
-                                <h4>Na skróty</h4>
+                                <h5>Na skróty</h5>
                                 <a class="js-scroll-trigger contactItem" href="#page-top" style="color: var(--darkGrey)">O BuildPrem</a>
                                 <a class="js-scroll-trigger contactItem" href="#aboutUs" style="color: var(--darkGrey)">Oferta</a>
                                 <a class="js-scroll-trigger contactItem" href="#offert" style="color: var(--darkGrey)">Nasze rynki</a>
                             </div>
                             <div class="conPart text-left">
-                                <h4>Skontaktuj się z nami</h4>
+                                <h5>Skontaktuj się z nami</h5>
                                 <div class="contactItem">
                                     <i class="fas fa-map-marker-alt"></i>
                                     ul. Sikorskiego 10/5
@@ -136,13 +160,13 @@
                                 </div>
                             </div>
                             <div class="conPart text-left">
-                                <h4>Pliki</h4>
+                                <h5>Pliki</h5>
                                 <div class="contactItem">
                                     Polityka prywatności
                                 </div>
                             </div>
                         </div>
-                        <div class="text-left mt-3">©2020 by BuildPrem.</div>
+                        <div class="text-left mt-3 contactItem">©2020 by BuildPrem.</div>
                 </div>
             </div>
         </section>
