mailing system (onpage PHP mailing server), small view changes

--- a/index.en.html
+++ b/index.en.html
@@ -24,7 +24,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#aboutUs" style="color: var(--darkGrey)">ABOUT US</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#aboutUs" >ABOUT US</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#profilDz" style="color: var(--darkGrey)">BUSINESS PROFILE</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger navbarPills" href="#kontakt" style="color: var(--darkGrey)">CONTACT</a></li>
                         <a href="./index.html" class="d-flex p-0 m-0 " onclick="dontNavigate()">
