--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
                         <div class="display-4 abUsHeader headerColor">Uzyskaj wycenę</div>
                     </div>
                 </div>
-                <div class="text-center whoWeAre mb-5 mt-2 headerColor">Gwarajcia uczciwych cen</div>
+                <div class="text-center whoWeAre mb-1 mt-2 headerColor">Gwarajcia uczciwych cen</div>
                 <div class="row p-0 m-0 justify-content-center">
-                    <div class="text-center whoWeAreText headerColor">
+
+
+                    <div class="text-center whoWeAreText headerColor mb-5">
                         BuildPrem to Firma budowlana i wykończeniowa,
                         gdzie znajdziesz pełną obsługę oraz nasze poświęcenie w budowaniu i ulepszaniu budynków mieszkaniowych i
                         komercyjnych zgodnie z potrzebami i pragnieniami klientów.
@@ -127,28 +129,28 @@
                             <div class="row align-items-stretch mb-5">
                                 <div class="col-md-6 mb-0">
                                     <div class="form-group">
-                                        <input class="form-control" id="name" type="text" placeholder="Imię i nazwisko *" required="required" data-validation-required-message="Proszę wprowadź swoje imię i nazwisko." />
+                                        <input class="form-control inputCon" id="name" type="text" placeholder="Imię i nazwisko *" required="required" data-validation-required-message="Proszę wprowadź swoje imię i nazwisko." />
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group">
-                                        <input class="form-control" id="email" type="email" placeholder="Twój email *" required="required" data-validation-required-message="Proszę wprowadź adres email." />
+                                        <input class="form-control inputCon" id="email" type="email" placeholder="Twój email *" required="required" data-validation-required-message="Proszę wprowadź adres email." />
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="form-group mb-md-0">
-                                        <input class="form-control" id="phone" type="tel" placeholder="Numer telefonu *" required="required" data-validation-required-message="Proszę podaj numer telefonu." />
+                                        <input class="form-control inputCon" id="phone" type="tel" placeholder="Numer telefonu *" required="required" data-validation-required-message="Proszę podaj numer telefonu." />
                                         <p class="help-block text-danger m-0"></p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group form-group-textarea mb-md-0 h-100">
-                                        <textarea class="form-control h-100" id="message" placeholder="Wiadomość *" required="required" data-validation-required-message="Wprowadź wiadomość."></textarea>
+                                        <textarea class="form-control h-100 inputCon" id="message" placeholder="Treść wiadomość *" required="required" data-validation-required-message="Wprowadź wiadomość."></textarea>
                                         <p class="help-block text-danger"></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="text-center">
                                 <div id="success"></div>
-                                <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Wyślij</button>
+                                <button class="btn btn-primary btn-xl text-uppercase sendBtn" id="sendMessageButton" type="submit">Wyślij</button>
                             </div>
                         </form>
                     </div>
@@ -160,13 +162,13 @@
             <div class="footer">
                     <div class="contactDiv bg-dark p-md-5 p-3 m-0">
                         <div class="row p-0 m-0 flex-md-row flex-column">
-                            <div class="conPart text-left">
+                            <div class="conPart text-left mb-3 mb-md-0">
                                 <h5>Na skróty</h5>
                                 <a class="js-scroll-trigger contactItem" href="#page-top" style="color: var(--darkGrey)">O BuildPrem</a>
                                 <a class="js-scroll-trigger contactItem" href="#aboutUs" style="color: var(--darkGrey)">Oferta</a>
                                 <a class="js-scroll-trigger contactItem" href="#offert" style="color: var(--darkGrey)">Nasze rynki</a>
                             </div>
-                            <div class="conPart text-left">
+                            <div class="conPart text-left  mb-3 mb-md-0">
                                 <h5>Skontaktuj się z nami</h5>
                                 <div class="contactItem">
                                     <i class="fas fa-map-marker-alt"></i>
@@ -180,12 +182,18 @@
                                     <a href="mailto:biuro@buildprem.com">biuro@buildprem.com</a>
                                 </div>
                             </div>
-                            <div class="conPart text-left">
+                            <div class="conPart text-left  mb-3 mb-md-0">
+                                <h5>Mapa</h5>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2426.431834299199!2d17.61913731595683!3d52.543713242223696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4704911f746db54f%3A0x8b912c2e08031588!2sW%C5%82adys%C5%82awa%20Sikorskiego%2010%2C%2062-200%20Gniezno!5e0!3m2!1spl!2spl!4v1604063151170!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" ></iframe>
+                            </div>
+                            <div class="conPart text-left  mb-3 mb-md-0">
                                 <h5>Pliki</h5>
                                 <div class="contactItem">Polityka prywatności</div>
                             </div>
+
                         </div>
                         <div class="text-left mt-3 contactItem">©2020 by BuildPrem.</div>
+
                 </div>
             </div>
         </section>
